--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Automated Software Testing w puppeteer",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/mocha/bin/mocha --timeout=30000 ./tests"
+    "test": "jest"
   },
   "keywords": [
     "Puppeteer",
